<resources>
    <string name="app_name">BCADayThirteen</string>
    <string name="title">Student Database</string>
    <string name="roll_no">Roll Number</string>
    <string name="name">Fullname</string>
    <string name="marks">Marks</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="show_info">About</string>
    <string name="view_all">View All</string>
</resources>